frontend/src/components/Header/styles/Header.module.scss
.headerWrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: sticky;
    top: 0px;
    min-width: 100%;
    background-color: white;
    z-index: 1000;
    max-height: 86px;

    &::before, &::after {
        content: '';
        position: absolute;
        min-height: 2px;
        width: 90%;
        left: 5%;
        margin-top: 10px;
        background-color: rgba(0, 0, 0, 0.5);
        transform: translateY(-50%);
    }

    &::after {
        top: 100%;
        margin-top: 0px;
    }

    >div {
        min-height: 100%;
        min-width: 90%;
        
        >div {
            margin: 15px 15px 5px;
            display: flex;
            align-items: center;

            &:first-child {
                display: flex;
                justify-content: space-between;
            }

            ul {
                display: flex;
                flex-direction: row;
                list-style: none;
                justify-content: space-around;
                align-items: center;
                padding: 0px;
                margin: 0px;

                li {
                    display: flex;
                    align-items: center;
                    margin: 0px 10px;
                    min-height: 50px;

                    a {
                        text-decoration: none;
                        color: inherit;
                    }
                }
            }
        }
    }
}

.logo {
    transform: translateY(2px);
    width: 60px;
    height: 60px;
}

@media (max-width: 1000px) {
    .about {
        visibility: hidden;
        width: 0px;
    }
}

